@@ -29,8 +29,10 @@ PKG_CPPFLAGS += -I.
 
 userLibrary: 	$(USERLIB) $(USERLIBST)
 		-@if test ! -e $(USERDIR)$(R_ARCH); then mkdir -p $(USERDIR)$(R_ARCH); fi
+		-@if test ! -e $(USERDIR)$(R_ARCH)/Rcpp; then mkdir -p $(USERDIR)$(R_ARCH)/Rcpp; fi
 		cp $(USERLIB) $(USERDIR)$(R_ARCH)
 		cp Rcpp*.h $(USERDIR)$(R_ARCH)
+		cp Rcpp/*.h $(USERDIR)$(R_ARCH)/Rcpp
 		cp $(USERLIBST) $(USERDIR)$(R_ARCH)
 		rm $(USERLIB) $(USERLIBST)
 
