@@ -56,10 +56,11 @@ $(PKGLIB): 	$(PKGOBJ)
 		$(CXX) -shared -o $(PKGLIB) $(PKGOBJ) $(PKG_LIBS)
 
 $(USERLIB):	$(USEROBJ)
-		-mkdir -p $(USERDIR) 2>/dev/null
+		-mkdir -p $(USERDIR)/Rcpp 2>/dev/null
 		ar r $(USERLIB) $(USEROBJ)
 		ranlib $(USERLIB)
 		cp -vax Rcp*.h $(USERDIR)
+		cp -vax Rcpp/*.h $(USERDIR)/Rcpp
 
 
 
